2012-06-14  Nick Alcock  <nick.alcock@oracle.com>

	Eliminate symbol-lookup duplication via macro-expansion.

	* libdtrace/dt_module.c (dt_module_syminit32, dt_module_syminit64)
	(dt_module_symcomp32, dt_module_symcomp64)
	(dt_module_symsort32, dt_module_symsort64)
	(dt_module_symname32, dt_module_symname64)
	(dt_module_symaddr32, dt_module_symaddr64):
	Merge and move into...

	* libdtrace/dt_symbol_modops.h (dt_module_syminit)
	(dt_module_symcomp, dt_module_symsort, dt_module_symname)
	(dt_module_symaddr): ... this new file.

	* libdtrace/dt_module.c: Include it repeatedly.

2012-05-18  Nick Alcock  <nick.alcock@oracle.com>

	The libctf split.

	* libctf/libctf.h: Delete, useless.
	* libdtrace/dt_decl.h: Include <sys/ctf_api.h> directly, instead
	of <libctf.h>.
	* libdtrace/dt_ident.h: Likewise.
	* libdtrace/dt_impl.h: Likewise.
	* libdtrace/dt_parser.h: Likewise.
	* libdtrace/dt_printf.h: Likewise.
	* libdtrace/dt_xlator.h: Likewise.
	* libproc/Pcontrol.h: Likewise.
	* libproc/libproc.h: Likewise.

	* .gitmodules: New: libdtrace-ctf is now an optional git
	submodule.

	* libctf/*.c, libctf/*.h: Moved into...
	* libdtrace-ctf: ... the new submodule (and git repository).
	* libctf/GNUmakefile: Likewise.
	* uts/common/sys/ctf.h: Likewise.
	* uts/common/sys/ctf_api.h: Likewise.
	* libctf/Build: Likewise, with changes for shared library build,
	and optional integrated-into-dtrace build.
	* libdtrace-ctf.ver: Likewise with this new version script.
	* uts/Build (HEADERS_INSTALL): Drop the CTF header files.

	* libctf/llib-lctf: Delete, lint libraries are obsolete.
	* uts/common/sys/ctfs.h: Delete, we do not have an in-kernel CTF
	filesystem.
	* uts/common/sys/ctfs_impl.h: Likewise.
	* uts/common/sys/dtrace_types.h: Migrate some types into
	<sys/ctf_types.h> in the submodule.  Drop a bunch of
	kernel-only declarations, declarations of stuff provided by Linux
	for years, and declarations of stuff in C for years.

	* GNUmakefile (PROJECT): New, name this project (used by