@@ -1046,7 +1046,6 @@ alloc:
 	ctf_setspecific(dmp->dm_ctfp, dmp);
 
 	dmp->dm_flags = DT_DM_LOADED; /* fake up loaded bit */
-	/* dmp->dm_modid = -1; */ /* no module ID */
 
 	/*
 	 * Fill the dynamic "C" CTF container with all of the intrinsic
@@ -1112,7 +1111,6 @@ alloc:
 	ctf_setspecific(dmp->dm_ctfp, dmp);
 
 	dmp->dm_flags = DT_DM_LOADED; /* fake up loaded bit */
-/*	dmp->dm_modid = -1; *//* no module ID */
 
 	if (ctf_import(dmp->dm_ctfp, dtp->dt_cdefs->dm_ctfp) == CTF_ERR) {
 		dt_dprintf("failed to import D parent container: %s\n",
